# psw

./: .gitignore  CMakeLists.txt  README.md  main.c  psw.h  psw_extz.c  psw_extz_sse.c  psw_gg.c  psw_gg2.c  psw_gg3.c  psw_gg3_sse.c  psw_sw.c  run_case.sh  run_perf.sh  run_tests.sh
test/: protein-perf-query.fa
test/case/gg_pp/exact_match/: query_aln.fa  target_aln.fa
test/case/gg_pp/local_match/: query_aln.fa
test/case/gg_pp/one_snp/: query_aln.fa  target_aln.fa
test/case/gg_pp/protein_case/: query_aln.fa
test/case/gg_pp/shorter_query/: query_aln.fa
test/case/gg_ps/exact_match/: query_seq.fa  target_aln.fa
test/case/gg_ps/local_match/: query_aln.fa  target_aln.fa
test/case/gg_ps/one_snp/: query_seq.fa  target_aln.fa
test/case/gg_ps/protein_case/: query_aln.fa  target_aln.fa
test/case/gg_ps/shorter_query/: query_seq.fa  target_aln.fa
